[package]
name = "platform-info"
version = "2.0.1"
authors = ["Alex Lyon <arcterus@mail.com>"]
edition = "2018"
description = "A simple cross-platform interface to get info about a system"

homepage = "https://github.com/uutils/platform-info"
repository = "https://github.com/uutils/platform-info"
readme = "README.md"
keywords = ["platform", "info", "system"]
categories = ["os"]
license = "MIT"

# spell-checker:ignore (crates) libc winapi (features) failpoints libloaderapi processthreadsapi sysinfoapi winbase winver

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "processthreadsapi", "sysinfoapi", "winbase", "winver"] }

[dependencies]
fail="0.5"
function_name="0.3"
serial_test="1"

[dev-dependencies]
regex = "1"

[features]
default = []
feat_failpoints = ["fail/failpoints"]
