[package]
name = "platform-info"
version = "2.0.5"
authors = ["uutils developers"]
edition = "2018"
description = "A simple cross-platform interface to get info about a system"

homepage = "https://github.com/uutils/platform-info"
repository = "https://github.com/uutils/platform-info"
readme = "README.md"
keywords = ["platform", "info", "system"]
categories = ["os"]
license = "MIT"

# spell-checker:ignore (crates) libc winapi (features) libloaderapi processthreadsapi sysinfoapi winbase winver

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.154"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "processthreadsapi", "sysinfoapi", "winbase", "winver"] }

[dev-dependencies]
regex = "1.10.4"
